--- a/Users.wiki
+++ b/Users.wiki
@@ -2,3 +2,6 @@
 
 == Create a user with HOME directory ==
 useradd -m -d /PATH/TO/FOLDER USERNAME
+
+== Manually create several users ==
+`for USER in user1 user2 user3; do useradd -m -s /bin/bash $USER ; mkdir /home/$USER/.ssh; touch /home/$USER/.ssh/authorized_keys ; chmod 600 /home/$USER/.ssh/authorized_keys; chown -R $USER:$USER /home/$USER ; vi /home/$USER/.ssh/authorized_keys; done`
