Adding Proc stuff

--- a/Linux.wiki
+++ b/Linux.wiki
@@ -1,5 +1,14 @@
 = Linux =
 
-[[Users]]
+== AWK, set field separator ==
+awk -F  ":" '/1/ {print $1}'
+
+== CURL, send put command ==
+(example taken from Elasticsearch's excluding a node)
+`curl -X PUT -d '{"transient":{"cluster.routing.allocation.exclude._ip":"CLUSTER_HOST_IP"}}' http://localhost:9200/_cluster/settings&pretty=true `
+
+[[Procs]]
 
 [[SystemInfo]]
+
+[[Users]]
