--- a/Linux.wiki
+++ b/Linux.wiki
@@ -22,6 +22,9 @@ minute hour day_of_month month day_of_week command
 - range of values
 / step values
 
+== Date == 
+date +"%Y%m%d_%H%M%S"
+
 == Files, remove spaces from name ==
 for f in *\ *; do mv "$f" "${f// /_}"; done
 
