--- a/Linux.wiki
+++ b/Linux.wiki
@@ -28,6 +28,8 @@ date +"%Y%m%d_%H%M%S"
 == Files, remove spaces from name ==
 for f in *\ *; do mv "$f" "${f// /_}"; done
 
+[[Network]]
+
 [[Procs]]
 
 [[Security]]
