--- a/Linux.wiki
+++ b/Linux.wiki
@@ -39,3 +39,15 @@ for f in *\ *; do mv "$f" "${f// /_}"; done
 == [[SystemInfo]] ==
 
 == [[Users]] ==
+
+== WGET a full website recursively ==
+wget \
+     --recursive \
+     --no-clobber \
+     --page-requisites \
+     --html-extension \
+     --convert-links \
+     --restrict-file-names=windows \
+     --domains kubernetes.io \
+     --no-parent \
+         https://kubernetes.io/docs/home/
