more git tricks

--- a/Git.wiki
+++ b/Git.wiki
@@ -1,10 +1,8 @@
 = Git =
 
 == revert to origin's master branch's version of file ==
-
 === Assuming you did not commit the file, or add it to the index, then: ===
 git checkout -- filename
-
 === Assuming you added it to the index, but did not commit it, then: ===
 git reset HEAD filename
 git checkout -- filename
@@ -13,4 +11,6 @@ git checkout origin/master filename
 ==== Assuming you want to blow away all commits from your branch (VERY DESTRUCTIVE): ====
 git reset --hard origin/master
 
+== changes commited to master, not pushed yet ==
+git reset --soft HEAD~1
 
