first commands for etcdctl

--- a/K8s.wiki
+++ b/K8s.wiki
@@ -2,6 +2,8 @@
 
 == [[K8s/Troubleshooting]] ==
 
+== [[K8s/etcd]] ==
+
 == Dashboard, connect to it ==
 kubectl proxy
 , then access it through the IP and port you get
