--- a/K8s/etcd.wiki
+++ b/K8s/etcd.wiki
@@ -1,3 +1,5 @@
 = etcd =
 
 sudo ETCDCTL_API=3 etcdctl --endpoints=https://127.0.0.1:2379 --cacert=/etc/etcd/ca.pem --cert=/etc/etcd/kubernetes.pem --key=/etc/etcd/kubernetes-key.pem member list
+
+sudo ETCDCTL_API=3 etcdctl endpoint health
