some more changes to mysql and git rebase

--- a/Git.wiki
+++ b/Git.wiki
@@ -1,5 +1,8 @@
 = Git =
 
+== Rebase ==
+git pull --rebase origin master
+
 == revert to origin's master branch's version of file ==
 === Assuming you did not commit the file, or add it to the index, then: ===
 git checkout -- filename
