--- a/Security.wiki
+++ b/Security.wiki
@@ -7,5 +7,5 @@ pwgen 16
 ssh-keygen -f filename -t rsa -b 4096 -C "your_email@example.com"
 
 === quick and dirty, without a passphrase ===
-ssh-keygen -f filename -t rsa -N ''
+ssh-keygen -t rsa -b 4096 -N '' -f filename
 
