--- a/Network.wiki
+++ b/Network.wiki
@@ -1,5 +1,11 @@
 = Network commands =
 
+== Check if a port is Open ==
+nmap -p <port> <ip>
+
+=== UDP ===
+nmap -sU -p <port> <ip>
+
 == Get Interface and IP to be used to reach an IP ==
 ip route get <IP>
 
