adding nc version

--- a/Network.wiki
+++ b/Network.wiki
@@ -1,9 +1,12 @@
 = Network commands =
 
 == Check if a port is Open ==
+nc -vz <ip> <port>
 nmap -p <port> <ip>
 
+
 === UDP ===
+nc -vz -u <ip> <port>
 nmap -sU -p <port> <ip>
 
 == Get Interface and IP to be used to reach an IP ==
