substitution on visual mode

--- a/VIM/Substitute_strings.wiki
+++ b/VIM/Substitute_strings.wiki
@@ -2,3 +2,6 @@
 
 == Remove New Line when next line starts with x ==
 :%s/\nx/x/g
+
+== Substitute all occurrences of string1 on a selection ==
+:'<,'>s/string1/string2/g
