--- a/Network.wiki
+++ b/Network.wiki
@@ -28,6 +28,10 @@ ping -t 10 www.google.com
 === Accessing from port 8044 in a remote server to 80 in a LAN ===
 ssh -f -N user@server.net -p 22 -i .ssh/key -R 8044:127.0.0.1:80 -vvv
 
+=== SOCKS Proxy through SSH Tunnel ===
+ssh -ND 1080 user@ip
+open -a Google\ Chrome --args --proxy-server="socks5://localhost:1080"
+
 === Other docs ===
 ssh -f user@personal-server.com -L 2000:personal-server.com:25 -N
 
