Adding push pull

--- a/VIM/fugitive.wiki
+++ b/VIM/fugitive.wiki
@@ -16,6 +16,12 @@
 == Diff on current file ==
 :Gdiff
 
+== Pull ==
+:Gpull <parameters>
+
+== Push ==
+:Gpush <parameters>
+
 == Rename the current file and the corresponding Vim buffer ==
 :Gmove
 
