--- a/Users.wiki
+++ b/Users.wiki
@@ -1,7 +1,7 @@
 = Users =
 
 == Create a user with HOME directory ==
-useradd -m -d /PATH/TO/FOLDER USERNAME
+useradd -s /bin/bash -m -d /PATH/TO/FOLDER USERNAME
 
 == Manually create several users ==
-`for USER in user1 user2 user3; do useradd -m -s /bin/bash $USER ; mkdir /home/$USER/.ssh; touch /home/$USER/.ssh/authorized_keys ; chmod 600 /home/$USER/.ssh/authorized_keys; chown -R $USER:$USER /home/$USER ; vi /home/$USER/.ssh/authorized_keys; vigr; done`
+`for USER in user1 user2 user3; do useradd -s /bin/bash -m -d /home/$USER $USER ; mkdir /home/$USER/.ssh; touch /home/$USER/.ssh/authorized_keys ; chmod 600 /home/$USER/.ssh/authorized_keys; chown -R $USER:$USER /home/$USER ; vi /home/$USER/.ssh/authorized_keys; vigr; done`
