--- a/VIM/Buffers.wiki
+++ b/VIM/Buffers.wiki
@@ -77,6 +77,9 @@
 === using a vertical split to the right ===
 :bel vert ter
 
+== replace in all buffers == 
+:bufdo %s/pattern/replace/ge | update
+
 == run command on all buffers ==
 === do a search replace through all buffers ===
 :bufdo %s/search_tearm/replace_term/g | update
